# headphone-hunters

./: .gitignore  main.py  pyproject.toml  setup_vector_storage.py  team.py
data/: headphone_buying_guide.txt
