[project]
name = "agent-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.6",
    "chromadb>=1.0.15",
    "langchain>=0.3.27",
    "newspaper4k>=0.9.3.1",
    "openai>=1.98.0",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
]
